adding top-page-icon

--- a/tech-website/index.html
+++ b/tech-website/index.html
@@ -42,246 +42,246 @@
 
 <body>
 
-        <header class="header">
+<header class="header">
 
-            <br>
+    <br>
 
-            <nav>
+    <nav>
 
-                <div class="page-heading">
+        <div class="page-heading">
 
-                    <h2><span>Tech</span> Website</h2>
+            <h2><span>Tech</span> Website</h2>
 
-                </div>
+        </div>
 
-                <ul>
+        <ul>
 
-                    <li><a href='#'>Home</a></li>
+            <li><a href='#'>Home</a></li>
 
-                    <li><a href='#'>Services</a></li>
+            <li><a href='#'>Services</a></li>
 
-                    <li><a href='#'>Plans</a></li>
+            <li><a href='#'>Plans</a></li>
 
-                    <li><a href='#'>About us</a></li>
+            <li><a href='#'>About us</a></li>
 
-                    <li><a href='#'>Contact us</a></li>
+            <li><a href='#'>Contact us</a></li>
 
-                </ul>
+        </ul>
 
-            </nav>
+    </nav>
 
 
-            <div class="header-content">
+    <div class="header-content">
 
-                <div class="">
+        <div class="">
 
-                    <h1>Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit.</h1>
+            <h1>Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit.</h1>
 
-                    <div class="subscribe-div">
+            <div class="subscribe-div">
 
-                        <input placeholder="Enter Your Email">
+                <input placeholder="Enter Your Email">
 
-                        <button>Subscribe</button>
-
-                    </div>
-
-                    <div class="button-container">
-
-                        <button class="create-account-button">Create Your Account</button>
-
-                        <button class="log-in-button">Log in</button>
-
-                    </div>
-
-                </div>
-
-                <div class="header-img-div">
-
-                <img src="images/icon-images/verified.png">
-
-                </div>
+                <button>Subscribe</button>
 
             </div>
 
-            <div class="headings-container">
+            <div class="button-container">
 
-                <h2>Our Service</h2>
+                <button class="create-account-button">Create Your Account</button>
 
-                <div class="line"></div>
-
-            </div>
-
-        </header>
-
-        <div class="service-section">
-
-            <div class="service-section-box">
-
-                <img src="images/icon-images/security.png">
-
-                <p>Security</p>
-
-            </div>
-
-            <div class="service-section-box">
-
-                <img src="images/icon-images/security.png">
-
-                <p>Security</p>
-
-            </div>
-
-            <div class="service-section-box">
-
-                <img src="images/icon-images/security.png">
-
-                <p>Security</p>
+                <button class="log-in-button">Log in</button>
 
             </div>
 
         </div>
 
-        <section class="plans-section">
+        <div class="header-img-div">
 
-            <div class="headings-container">
+            <img src="images/icon-images/verified.png">
 
-            <h2>PLANS</h2>
+        </div>
 
-            <div class="line"></div>
+    </div>
+
+    <div class="headings-container">
+
+        <h2>Our Service</h2>
+
+        <div class="line"></div>
+
+    </div>
+
+</header>
+
+<div class="service-section">
+
+    <div class="service-section-box">
+
+        <img src="images/icon-images/security.png">
+
+        <p>Security</p>
+
+    </div>
+
+    <div class="service-section-box">
+
+        <img src="images/icon-images/security.png">
+
+        <p>Security</p>
+
+    </div>
+
+    <div class="service-section-box">
+
+        <img src="images/icon-images/security.png">
+
+        <p>Security</p>
+
+    </div>
+
+</div>
+
+<section class="plans-section">
+
+    <div class="headings-container">
+
+        <h2>PLANS</h2>
+
+        <div class="line"></div>
+
+    </div>
+
+    <br>
+
+    <div class="plans-container">
+
+        <div class="plans-div">
+
+            <h2>Plan A</h2>
+
+            <div class="plans-icon-text-row">
+
+                <ion-icon name="shield-checkmark-outline"></ion-icon>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+            </div>
+
+            <br>
+            <div class="plans-icon-text-row">
+
+                <ion-icon name="shield-checkmark-outline"></ion-icon>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+            </div>
+            <br>
+
+            <div class="plans-icon-text-row">
+
+                <ion-icon name="shield-checkmark-outline"></ion-icon>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 
             </div>
 
             <br>
 
-            <div class="plans-container">
+            <div class="plans-icon-text-row">
 
-                <div class="plans-div">
-
-                    <h2>Plan A</h2>
-
-                    <div class="plans-icon-text-row">
-
-                        <ion-icon name="shield-checkmark-outline"></ion-icon>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-
-                    </div>
-
-                    <br>
-                    <div class="plans-icon-text-row">
-
-                        <ion-icon name="shield-checkmark-outline"></ion-icon>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-
-                    </div>
-                    <br>
-
-                    <div class="plans-icon-text-row">
-
-                        <ion-icon name="shield-checkmark-outline"></ion-icon>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-
-                    </div>
-
-                    <br>
-
-                    <div class="plans-icon-text-row">
-
-                        <ion-icon name="shield-checkmark-outline"></ion-icon>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-
-                    </div>
-<br>
-                    <button href="#">View Plan</button>
-
-                </div>
-
-                <div class="plans-div">
-
-                    <h2>Plan B</h2>
-
-                    <div class="plans-icon-text-row">
-
-                        <ion-icon name="shield-checkmark-outline"></ion-icon>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-
-                    </div>
-
-                    <br>
-                    <div class="plans-icon-text-row">
-
-                        <ion-icon name="shield-checkmark-outline"></ion-icon>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-
-                    </div>
-                    <br>
-
-                    <div class="plans-icon-text-row">
-
-                        <ion-icon name="shield-checkmark-outline"></ion-icon>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-
-                    </div>
-
-                    <br>
-
-                    <div class="plans-icon-text-row">
-
-                        <ion-icon name="shield-checkmark-outline"></ion-icon>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-
-                    </div>
-
-                    <br>
-
-                    <button href="#">View Plan</button>
-
-                </div>
-
-                <div class="plans-div">
-
-                    <h2>Plan C</h2>
-
-                    <div class="plans-icon-text-row">
-
-                        <ion-icon name="shield-checkmark-outline"></ion-icon>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-
-                    </div>
-
-                    <br>
-                    <div class="plans-icon-text-row">
-
-                        <ion-icon name="shield-checkmark-outline"></ion-icon>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-
-                    </div>
-                    <br>
-
-                    <div class="plans-icon-text-row">
-
-                        <ion-icon name="shield-checkmark-outline"></ion-icon>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-
-                    </div>
-
-                    <br>
-
-                    <div class="plans-icon-text-row">
-
-                        <ion-icon name="shield-checkmark-outline"></ion-icon>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-
-                    </div>
-                    <br>
-
-                    <button href="#">View Plan</button>
-
-                </div>
+                <ion-icon name="shield-checkmark-outline"></ion-icon>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 
             </div>
-        </section>
+            <br>
+            <button href="#">View Plan</button>
 
-        <br>
+        </div>
+
+        <div class="plans-div">
+
+            <h2>Plan B</h2>
+
+            <div class="plans-icon-text-row">
+
+                <ion-icon name="shield-checkmark-outline"></ion-icon>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+            </div>
+
+            <br>
+            <div class="plans-icon-text-row">
+
+                <ion-icon name="shield-checkmark-outline"></ion-icon>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+            </div>
+            <br>
+
+            <div class="plans-icon-text-row">
+
+                <ion-icon name="shield-checkmark-outline"></ion-icon>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+            </div>
+
+            <br>
+
+            <div class="plans-icon-text-row">
+
+                <ion-icon name="shield-checkmark-outline"></ion-icon>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+            </div>
+
+            <br>
+
+            <button href="#">View Plan</button>
+
+        </div>
+
+        <div class="plans-div">
+
+            <h2>Plan C</h2>
+
+            <div class="plans-icon-text-row">
+
+                <ion-icon name="shield-checkmark-outline"></ion-icon>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+            </div>
+
+            <br>
+            <div class="plans-icon-text-row">
+
+                <ion-icon name="shield-checkmark-outline"></ion-icon>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+            </div>
+            <br>
+
+            <div class="plans-icon-text-row">
+
+                <ion-icon name="shield-checkmark-outline"></ion-icon>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+            </div>
+
+            <br>
+
+            <div class="plans-icon-text-row">
+
+                <ion-icon name="shield-checkmark-outline"></ion-icon>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+            </div>
+            <br>
+
+            <button href="#">View Plan</button>
+
+        </div>
+
+    </div>
+</section>
+
+<br>
 <section class="features-section">
 
     <div class="headings-container">
@@ -298,9 +298,9 @@
 
             <div class="features-img-heading-row">
 
-            <img src="images/icon-images/stopwatch.png"/>
+                <img src="images/icon-images/stopwatch.png"/>
 
-            <p>Speed</p>
+                <p>Speed</p>
 
             </div>
             <br>
@@ -318,7 +318,7 @@
                 <p>Speed</p>
 
             </div>
-<br>
+            <br>
             <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </span>
 
         </div>
@@ -333,7 +333,7 @@
                 <p>Speed</p>
 
             </div>
-<br>
+            <br>
             <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </span>
 
         </div>
@@ -367,7 +367,7 @@
                 <p>Speed</p>
 
             </div>
-<br>
+            <br>
             <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </span>
 
         </div>
@@ -382,7 +382,7 @@
                 <p>Speed</p>
 
             </div>
-<br>
+            <br>
             <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </span>
 
         </div>
@@ -392,72 +392,72 @@
 </section>
 
 
-        <section class="accessibility-section">
+<section class="accessibility-section">
 
-            <div class="headings-container">
+    <div class="headings-container">
 
-                <h2>Accessibility</h2>
+        <h2>Accessibility</h2>
 
-                <div class="line"></div>
+        <div class="line"></div>
 
-            </div>
+    </div>
+
+    <br>
+    <h3>The largest VPN server network in the world</h3>
+
+    <div class="accessibility-div">
+
+        <img src="images/website-images/52611.png"/>
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sapien velit, convallis ac fringilla ut, iaculis quis elit.<br>Curabitur velit lectus, porta ac libero a, semper ornare diam.  </p>
+
+    </div>
+    <br>
+
+    <div class="headings-container">
+        <h3>DOWNLOAD OUR APPLICATION</h3>
+
+        <div class="line"></div>
+
+    </div>
+
+    <br>
+
+    <div class="accessibility-icon-text-div-container">
+
+        <div class="accessibility-icon-text-div">
+
+            <ion-icon name="logo-windows"></ion-icon>
+
+            <p>Windows</p>
+
+        </div>
+
+        <div class="accessibility-icon-text-div">
+
+            <ion-icon name="logo-apple"></ion-icon>
+
+            <p>Mac OS</p>
+        </div>
+
+        <div class="accessibility-icon-text-div">
+
+            <ion-icon name="logo-android"></ion-icon>
+
+            <p>Android</p>
+        </div>
+        <div class="accessibility-icon-text-div">
+
+            <ion-icon name="logo-apple-appstore"></ion-icon>
+
+            <p>IOS</p>
+        </div>
+
+    </div>
+
+</section>
 
 <br>
-            <h3>The largest VPN server network in the world</h3>
-
-            <div class="accessibility-div">
-
-            <img src="images/website-images/52611.png"/>
-
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sapien velit, convallis ac fringilla ut, iaculis quis elit.<br>Curabitur velit lectus, porta ac libero a, semper ornare diam.  </p>
-
-            </div>
-            <br>
-
-            <div class="headings-container">
-                <h3>DOWNLOAD OUR APPLICATION</h3>
-
-                <div class="line"></div>
-
-            </div>
-
-            <br>
-
-            <div class="accessibility-icon-text-div-container">
-
-            <div class="accessibility-icon-text-div">
-
-                <ion-icon name="logo-windows"></ion-icon>
-
-                <p>Windows</p>
-
-            </div>
-
-                <div class="accessibility-icon-text-div">
-
-                    <ion-icon name="logo-apple"></ion-icon>
-
-                    <p>Mac OS</p>
-                </div>
-
-                <div class="accessibility-icon-text-div">
-
-                    <ion-icon name="logo-android"></ion-icon>
-
-                    <p>Android</p>
-                </div>
-                <div class="accessibility-icon-text-div">
-
-                    <ion-icon name="logo-apple-appstore"></ion-icon>
-
-                    <p>IOS</p>
-                </div>
-
-            </div>
-
-        </section>
-
-        <br>
 <section class="feedback-section">
     <br>
     <div class="headings-container">
@@ -475,7 +475,7 @@
         <div class="feedback-div">
 
             <img src="images/customer-images/customer-1.jpg"/>
-<br>
+            <br>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut tristique enim. Aliquam erat volutpat. Aenean tempus auctor dignissim.</p>
 
             <div class="icons-container">
@@ -489,7 +489,7 @@
             </div>
 
             <div class="feedback-name-div">
-            <p>By John Doe</p>
+                <p>By John Doe</p>
             </div>
 
         </div>
@@ -541,10 +541,10 @@
 
 </section>
 
-        <div class="border"></div>
+<div class="border"></div>
 
 <footer>
-<br>
+    <br>
     <h2>TECH WEBSITE</h2>
 
     <table>
@@ -581,8 +581,10 @@
 
 </footer>
 
-<script src="js/script.js"></script>
+<script src="js/sign-up-script.js"></script>
 
-    </body>
+<script src="js/top-button-script.js"></script>
+
+</body>
 
 </html>
