Changing service box

--- a/tech-website/index.html
+++ b/tech-website/index.html
@@ -2,8 +2,11 @@
 <html lang="en">
 
 <head>
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap" rel="stylesheet">    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap" rel="stylesheet">
 
@@ -117,7 +120,7 @@
 
     <div class="service-section-box">
 
-        <img src="images/icon-images/security.png">
+        <ion-icon name="shield-outline"></ion-icon>
 
         <p>Security</p>
 
@@ -125,17 +128,17 @@
 
     <div class="service-section-box">
 
-        <img src="images/icon-images/security.png">
+        <ion-icon name="checkmark-circle-outline"></ion-icon>
 
-        <p>Security</p>
+        <p>Service</p>
 
     </div>
 
     <div class="service-section-box">
 
-        <img src="images/icon-images/security.png">
+        <ion-icon name="globe-outline"></ion-icon>
 
-        <p>Security</p>
+        <p>Accessibility</p>
 
     </div>
 
