adding nav bar button features

--- a/tech-website/index.html
+++ b/tech-website/index.html
@@ -49,7 +49,7 @@
 
     <br>
 
-    <nav>
+    <nav class="nav-bar">
 
         <div class="page-heading">
 
@@ -583,6 +583,8 @@
     </table>
 
 </footer>
+
+<script src="js/navigation-bar-button.js"></script>
 
 <script src="js/sign-up-script.js"></script>
 
