--- a/tech-website/index.html
+++ b/tech-website/index.html
@@ -59,15 +59,17 @@
 
         <ul>
 
-            <li><a href='#'>Home</a></li>
+            <li><a class="button" href='#'>Home</a></li>
 
-            <li><a href='#'>Services</a></li>
+            <li><a class="button" href='#plans-section'>Plans</a></li>
 
-            <li><a href='#'>Plans</a></li>
+            <li><a class="button" href='#features-section'>Features</a></li>
 
-            <li><a href='#'>About us</a></li>
+            <li><a class="button" href='#accessibility-section'>Accessibility</a></li>
 
-            <li><a href='#'>Contact us</a></li>
+            <li><a class="button" href='#feedback-section'>Feedback</a></li>
+
+            <li><a href='#'>Contact Us</a></li>
 
         </ul>
 
@@ -144,7 +146,7 @@
 
 </div>
 
-<section class="plans-section">
+<section id="plans-section" class="plans-section">
 
     <div class="headings-container">
 
@@ -285,7 +287,7 @@
 </section>
 
 <br>
-<section class="features-section">
+<section id="features-section" class="features-section">
 
     <div class="headings-container">
 
@@ -395,7 +397,7 @@
 </section>
 
 
-<section class="accessibility-section">
+<section id="accessibility-section" class="accessibility-section">
 
     <div class="headings-container">
 
@@ -461,7 +463,7 @@
 </section>
 
 <br>
-<section class="feedback-section">
+<section id="feedback-section" class="feedback-section">
     <br>
     <div class="headings-container">
 
