updating nav bar

--- a/tech-website/index.html
+++ b/tech-website/index.html
@@ -36,6 +36,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech Website</title>
+    <link rel="stylesheet" href="style/style-responsive.scss">
     <link rel="stylesheet" href="style/footer.scss">
     <link rel="stylesheet" href="style/accessibility.scss">
     <link rel="stylesheet" href="style/header.scss">
@@ -69,7 +70,7 @@
 
             <li><a class="button" href='#feedback-section'>Feedback</a></li>
 
-            <li><a href='#'>Contact Us</a></li>
+            <li><a class="button" href='#'>Contact Us</a></li>
 
         </ul>
 
@@ -586,9 +587,9 @@
 
 </footer>
 
-<script src="js/navigation-bar-button.js"></script>
+<script src="js/sign-up-script.js.js"></script>
 
-<script src="js/sign-up-script.js"></script>
+<script src="js/navigation-bar-button.js"></script>
 
 <script src="js/top-button-script.js"></script>
 
