updating tech-website

--- a/tech-website/index.html
+++ b/tech-website/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+
+    <link rel="stylesheet" href="style/style-responsive.scss">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -9,8 +12,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap" rel="stylesheet">    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap" rel="stylesheet">
-
-    <link rel='stylesheet' href='style/style.css'>
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 
@@ -36,11 +37,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech Website</title>
-    <link rel="stylesheet" href="style/style-responsive.scss">
     <link rel="stylesheet" href="style/footer.scss">
     <link rel="stylesheet" href="style/accessibility.scss">
     <link rel="stylesheet" href="style/header.scss">
     <link rel="stylesheet" href="style/features.scss">
+    <link rel='stylesheet' href='style/style.css'>
+    <link rel="stylesheet" href="style/style.scss">
 
 </head>
 
@@ -58,7 +60,7 @@
 
         </div>
 
-        <ul>
+        <ul id="nav-bar-list">
 
             <li><a class="button" href='#'>Home</a></li>
 
@@ -133,7 +135,7 @@
 
         <ion-icon name="checkmark-circle-outline"></ion-icon>
 
-        <p>Service</p>
+        <p>Services</p>
 
     </div>
 
@@ -587,7 +589,7 @@
 
 </footer>
 
-<script src="js/sign-up-script.js.js"></script>
+<script src="js/sign-up-script.js"></script>
 
 <script src="js/navigation-bar-button.js"></script>
 
