updating footer section

--- a/tech-website/index.html
+++ b/tech-website/index.html
@@ -548,44 +548,58 @@
 
 </section>
 
-<div class="border"></div>
-
 <footer>
-    <br>
     <h2>TECH WEBSITE</h2>
+
+    <div class="footer-column">
 
     <table>
 
         <tr>
-            <th>Home</th>
-            <th>Home</th>
-            <th>Home</th>
-            <th>Home</th>
+            <th>PLATFORM</th>
+            <th>SOCIAL</th>
+            <th>HELP</th>
         </tr>
 
         <tr>
-            <td>Home</td>
-            <td>Home</td>
-            <td>Home</td>
-            <td>Home</td>
+
+            <td><a href="#">Windows</a></td>
+            <td><a href="#">Facebook</a></td>
+            <td><a href="#">FAQ</a></td>
         </tr>
 
         <tr>
-            <td>Home</td>
-            <td>Home</td>
-            <td>Home</td>
-            <td>Home</td>
+            <td><a href="#">MAC</a></td>
+            <td><a href="#">Instagram</a></td>
+            <td><a href="#">Contact Us</a></td>
         </tr>
 
         <tr>
-            <td>Home</td>
-            <td>Home</td>
-            <td>Home</td>
-            <td>Home</td>
+            <td><a href="#">Android</a></td>
+            <td><a href="#">Twitter</a></td>
+            <td><a href="#">Privacy</a></td>
+
+        </tr>
+
+        <tr>
+            <td><a href="#">IOS</a></td>
+            <td><a href="#">Reddit</a></td>
+            <td><a href="#">Terms and policy</a></td>
         </tr>
 
     </table>
 
+    <div class="">
+
+        ADDRESS : Route de la Galaise 32,<br>
+        1228 Plan-les-Ouates
+        Geneva, Switzerland
+
+    </div>
+
+    </div>
+
+    <p>Copyright © 2015 by Tech Website. All rights reserved.</p>
 </footer>
 
 <script src="js/sign-up-script.js"></script>
