updating accessibility and feedback section responsiveness

--- a/tech-website/index.html
+++ b/tech-website/index.html
@@ -416,7 +416,7 @@
 
         <img src="images/website-images/52611.png"/>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sapien velit, convallis ac fringilla ut, iaculis quis elit.<br>Curabitur velit lectus, porta ac libero a, semper ornare diam.  </p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sapien velit, convallis ac fringilla ut, iaculis quis elit.<br>Curabitur velit lectus, porta ac libero a, semper ornare.  </p>
 
     </div>
     <br>
@@ -551,7 +551,7 @@
 <footer>
     <h2>TECH WEBSITE</h2>
 
-    <div class="footer-column">
+    <div class="footer-div">
 
     <table>
 
@@ -589,17 +589,18 @@
 
     </table>
 
-    <div class="">
+    <div class="address-div">
 
-        ADDRESS : Route de la Galaise 32,<br>
+        <address>ADDRESS : Route de la Galaise 32,<br>
         1228 Plan-les-Ouates
-        Geneva, Switzerland
+            Geneva, Switzerland</address>
+
+        <p>Copyright © 2015 by Tech Website. All rights reserved.</p>
 
     </div>
 
     </div>
 
-    <p>Copyright © 2015 by Tech Website. All rights reserved.</p>
 </footer>
 
 <script src="js/sign-up-script.js"></script>
