--- a/tech-website/index.html
+++ b/tech-website/index.html
@@ -43,6 +43,7 @@
     <link rel="stylesheet" href="style/features.scss">
     <link rel='stylesheet' href='style/style.css'>
     <link rel="stylesheet" href="style/style.scss">
+    <script src="js/sign-up-script.js"></script>
 
 </head>
 
@@ -52,6 +53,8 @@
 
     <br>
 
+    <div class="nav-bar-container">
+
     <nav class="nav-bar">
 
         <div class="page-heading">
@@ -60,7 +63,7 @@
 
         </div>
 
-        <ul id="nav-bar-list">
+        <ul class="nav-bar-list">
 
             <li><a class="button" href='#'>Home</a></li>
 
@@ -78,6 +81,7 @@
 
     </nav>
 
+    </div>
 
     <div class="header-content">
 
@@ -119,9 +123,11 @@
 
     </div>
 
+
 </header>
 
 <div class="service-section">
+
 
     <div class="service-section-box">
 
@@ -595,12 +601,12 @@
         1228 Plan-les-Ouates
             Geneva, Switzerland</address>
 
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2763.116907549066!2d6.1006912154319615!3d46.168328479115644!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478c7b71017d334b%3A0x75c9bcd8154403ee!2sRte%20de%20la%20Galaise%2032%2C%201228%20Plan-les-Ouates%2C%20Switzerland!5e0!3m2!1sen!2sin!4v1632080672404!5m2!1sen!2sin" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+
+    </div>
+
         <p>Copyright © 2015 by Tech Website. All rights reserved.</p>
-
     </div>
-
-    </div>
-
 </footer>
 
 <script src="js/sign-up-script.js"></script>
