adding contact us box feature

--- a/tech-website/index.html
+++ b/tech-website/index.html
@@ -75,7 +75,7 @@
 
             <li><a class="button" href='#feedback-section'>Feedback</a></li>
 
-            <li><a class="button" href='#'>Contact Us</a></li>
+            <li><button class="contact-us-button"><a class="button" href='#'>Contact Us</a></button></li>
 
         </ul>
 
@@ -115,6 +115,48 @@
 
     </div>
 
+    <div class="contact-us-div">
+
+        <div class="contact-us-heading-div">
+
+            <h2>Contact Us</h2>
+        </div>
+
+        <div class="form">
+
+            <input type="text"/>
+
+            <textarea rows="4" cols="30"></textarea>
+<br>
+            <button>Submit</button>
+
+        </div>
+
+        <div class="contact-us-column-container">
+
+            <div class="contact-us-column">
+
+                <ion-icon name="location-outline"></ion-icon>
+
+                <p>ADDRESS : Route de la Galaise 32,
+                    1228 Plan-les-Ouates Geneva, Switzerland </p>
+
+            </div>
+            <div class="contact-us-column">
+                <ion-icon name="call-outline"></ion-icon>
+
+                <p>Phone No:923562123 </p>
+
+            </div>
+            <div class="contact-us-column">
+                <ion-icon name="mail-outline"></ion-icon>
+
+                <p>Email-id: techwebsite@gmail.com</p>
+
+            </div>
+        </div>
+    </div>
+
     <div class="headings-container">
 
         <h2>Our Service</h2>
@@ -122,7 +164,6 @@
         <div class="line"></div>
 
     </div>
-
 
 </header>
 
@@ -610,6 +651,8 @@
 </footer>
 
 <script src="js/sign-up-script.js"></script>
+
+<script src="js/contact-us-page.js"></script>
 
 <script src="js/navigation-bar-button.js"></script>
 
