updating contact us section

--- a/tech-website/index.html
+++ b/tech-website/index.html
@@ -122,7 +122,7 @@
             <h2>Contact Us</h2>
         </div>
 
-        <div class="form">
+        <form>
 
             <input type="text"/>
 
@@ -130,7 +130,8 @@
 <br>
             <button>Submit</button>
 
-        </div>
+        </form>
+
 
         <div class="contact-us-column-container">
 
@@ -154,7 +155,9 @@
                 <p>Email-id: techwebsite@gmail.com</p>
 
             </div>
+
         </div>
+
     </div>
 
     <div class="headings-container">
@@ -168,7 +171,6 @@
 </header>
 
 <div class="service-section">
-
 
     <div class="service-section-box">
 
