adding contact us mobile view feature

--- a/tech-website/index.html
+++ b/tech-website/index.html
@@ -119,15 +119,18 @@
 
         <div class="contact-us-heading-div">
 
-            <h2>Contact Us</h2>
+            <h2><span>CONTACT<br></span>US</h2>
+
         </div>
 
         <form>
 
-            <input type="text"/>
+            <input placeholder="Email-id" type="text"/>
 
-            <textarea rows="4" cols="30"></textarea>
-<br>
+            <textarea rows="10" cols="47"></textarea>
+
+            <br>
+
             <button>Submit</button>
 
         </form>
@@ -146,13 +149,13 @@
             <div class="contact-us-column">
                 <ion-icon name="call-outline"></ion-icon>
 
-                <p>Phone No:923562123 </p>
+                <p>Phone No : 923562123 </p>
 
             </div>
             <div class="contact-us-column">
                 <ion-icon name="mail-outline"></ion-icon>
 
-                <p>Email-id: techwebsite@gmail.com</p>
+                <p>Email-id : techwebsite@gmail.com</p>
 
             </div>
 
