adding faq page

--- a/tech-website/index.html
+++ b/tech-website/index.html
@@ -3,13 +3,12 @@
 
 <head>
 
-    <link rel="stylesheet" href="style/style-responsive.scss">
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap" rel="stylesheet">    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap" rel="stylesheet">
 
@@ -43,7 +42,7 @@
     <link rel="stylesheet" href="style/features.scss">
     <link rel='stylesheet' href='style/style.css'>
     <link rel="stylesheet" href="style/style.scss">
-    <script src="js/sign-up-script.js"></script>
+    <link rel="stylesheet" href="style/style-responsive.scss">
 
 </head>
 
